Intento de inicio

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,5 +17,12 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
     }
 }
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://maven.zoom.us' }
+    }
+}
 
 apply plugin: "com.facebook.react.rootproject"
